# FacebookFriendNetworkAnalyzer

./: .flake8  .gitignore  .gitlab-ci.yml  Draft.ipynb  FacebookScrape.ipynb  Organize your wedding with social network analysis in Python.ipynb  Organize_your_wedding_with_social_network_analysis_in_Python.ipynb  README.md  README_FOR_DEVELOPER.md  Read_your_network_of_friends_in_Facebook_by_scraping_with_Python.ipynb  create_production_file.py  db.sqlite3  log.py  main.js  manage.py  my_friends_network  noxfile.py  package-lock.json  package.json  production.config  pyproject.toml  pytest.ini  requirements.txt  setup_logger.yaml  start_analyzer.sh  start_project.sh
core/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
core/management/commands/: delete_scan_instances_with_missing_file.py
core/migrations/: 0001_initial.py  0002_auto_20210707_1243.py
core/templates/core/: analysis.html  base.html  choose_network.html  home.html  login.html  scan.html
facebook_network_analyzer/: settings.py  urls.py  wsgi.py
sample_data/: FacebookScrape.pptx  my_anonymized_network.json
src/: facebook_css_selectors.py  facebook_friend_network.py  facebook_friend_network_graphql_scanner.py  facebook_friend_network_scanner.py  friend.py  friend_network.py  friend_set.py
static/css/: general_style.css
static/sass/: _center.scss  _color_variables.scss  _cool_button.scss  _delicate_typography.scss  _header.scss  general_style.scss
tests/: test_analysis.py  test_choose_network_view.py  test_delete_scan_instances_with_missing_file.py  test_facebook_friend_network.py  test_facebook_friend_network_graphql_scanner.py  test_facebook_friend_network_scanner.py  test_friend.py  test_friend_network.py  test_friend_set.py  test_scan_view.py
tests/helpers/: common_friends_page.html  facebook_friend_list_page.html  mutual_friends_loading_page.html  network_example.json
